lib/grammar.output
   0  $accept : %entry% $end

   1  input : let_stmt

   2  decs : dec
   3       | decs dec

   4  dec : tydec
   5      | vardec
   6      | fundec

   7  tydec : TYPE ID EQ ty

   8  ty : ID
   9     | LBRACE tyfields RBRACE
  10     | ARRAY OF ID

  11  tyfields :
  12           | nonempty_tyfields

  13  nonempty_tyfields : tyfield
  14                    | nonempty_tyfields COMMA tyfield

  15  tyfield : ID COLON ID

  16  record_initialisation_fields :
  17                               | ne_record_initialisation_fields

  18  ne_record_initialisation_fields : record_initialisation_field
  19                                  | ne_record_initialisation_fields COMMA record_initialisation_field

  20  record_initialisation_field : ID EQ exp

  21  vardec : VAR ID ASSIGN exp
  22         | VAR ID COLON ID ASSIGN exp

  23  fundec : FUNCTION ID LPAREN tyfields RPAREN EQ exp
  24         | FUNCTION ID LPAREN tyfields RPAREN COLON ID EQ exp

  25  let_stmt : LET decs IN expseq END

  26  expseq :
  27         | nonempty_expseq

  28  nonempty_expseq : exp
  29                  | nonempty_expseq SEMICOLON exp
  30                  | error SEMICOLON exp

  31  exp : STRING
  32      | INT
  33      | NIL
  34      | exp PLUS exp
  35      | exp MINUS exp
  36      | exp TIMES exp
  37      | exp DIVIDE exp
  38      | exp EQ exp
  39      | exp NEQ exp
  40      | exp LT exp
  41      | exp GT exp
  42      | exp LE exp
  43      | exp GE exp
  44      | exp AND exp
  45      | exp OR exp
  46      | MINUS exp
  47      | BREAK
  48      | assignment
  49      | funcall
  50      | var
  51      | ID LBRACK exp RBRACK OF exp
  52      | ID LBRACE record_initialisation_fields RBRACE
  53      | if_stmt
  54      | for_stmt
  55      | while_stmt
  56      | LPAREN expseq RPAREN
  57      | LPAREN error RPAREN
  58      | let_stmt

  59  var : ID DOT ID
  60      | ID LBRACK exp RBRACK
  61      | ID

  62  assignment : var ASSIGN exp

  63  while_stmt : WHILE exp DO exp

  64  if_stmt : IF exp THEN exp
  65          | IF exp THEN exp ELSE exp

  66  for_stmt : FOR ID ASSIGN exp TO exp DO exp

  67  funcall : ID LPAREN params RPAREN

  68  params :
  69         | non_empty_params

  70  non_empty_params : exp
  71                   | non_empty_params COMMA exp

  72  %entry% : '\001' input

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . input  (72)

	LET  shift 3
	.  error

	input  goto 4
	let_stmt  goto 5


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	let_stmt : LET . decs IN expseq END  (25)

	FUNCTION  shift 6
	VAR  shift 7
	TYPE  shift 8
	.  error

	decs  goto 9
	dec  goto 10
	tydec  goto 11
	vardec  goto 12
	fundec  goto 13


state 4
	%entry% : '\001' input .  (72)

	.  reduce 72


state 5
	input : let_stmt .  (1)

	.  reduce 1


state 6
	fundec : FUNCTION . ID LPAREN tyfields RPAREN EQ exp  (23)
	fundec : FUNCTION . ID LPAREN tyfields RPAREN COLON ID EQ exp  (24)

	ID  shift 14
	.  error


state 7
	vardec : VAR . ID ASSIGN exp  (21)
	vardec : VAR . ID COLON ID ASSIGN exp  (22)

	ID  shift 15
	.  error


state 8
	tydec : TYPE . ID EQ ty  (7)

	ID  shift 16
	.  error


state 9
	decs : decs . dec  (3)
	let_stmt : LET decs . IN expseq END  (25)

	IN  shift 17
	FUNCTION  shift 6
	VAR  shift 7
	TYPE  shift 8
	.  error

	dec  goto 18
	tydec  goto 11
	vardec  goto 12
	fundec  goto 13


state 10
	decs : dec .  (2)

	.  reduce 2


state 11
	dec : tydec .  (4)

	.  reduce 4


state 12
	dec : vardec .  (5)

	.  reduce 5


state 13
	dec : fundec .  (6)

	.  reduce 6


state 14
	fundec : FUNCTION ID . LPAREN tyfields RPAREN EQ exp  (23)
	fundec : FUNCTION ID . LPAREN tyfields RPAREN COLON ID EQ exp  (24)

	LPAREN  shift 19
	.  error


state 15
	vardec : VAR ID . ASSIGN exp  (21)
	vardec : VAR ID . COLON ID ASSIGN exp  (22)

	COLON  shift 20
	ASSIGN  shift 21
	.  error


state 16
	tydec : TYPE ID . EQ ty  (7)

	EQ  shift 22
	.  error


state 17
	let_stmt : LET decs IN . expseq END  (25)
	expseq : .  (26)

	error  shift 23
	ID  shift 24
	STRING  shift 25
	INT  shift 26
	LPAREN  shift 27
	MINUS  shift 28
	IF  shift 29
	WHILE  shift 30
	FOR  shift 31
	LET  shift 3
	BREAK  shift 32
	NIL  shift 33
	END  reduce 26

	let_stmt  goto 34
	exp  goto 35
	expseq  goto 36
	nonempty_expseq  goto 37
	assignment  goto 38
	funcall  goto 39
	var  goto 40
	if_stmt  goto 41
	for_stmt  goto 42
	while_stmt  goto 43


state 18
	decs : decs dec .  (3)

	.  reduce 3


state 19
	fundec : FUNCTION ID LPAREN . tyfields RPAREN EQ exp  (23)
	fundec : FUNCTION ID LPAREN . tyfields RPAREN COLON ID EQ exp  (24)
	tyfields : .  (11)

	ID  shift 44
	RPAREN  reduce 11

	tyfields  goto 45
	nonempty_tyfields  goto 46
	tyfield  goto 47


state 20
	vardec : VAR ID COLON . ID ASSIGN exp  (22)

	ID  shift 48
	.  error


state 21
	vardec : VAR ID ASSIGN . exp  (21)

	ID  shift 24
	STRING  shift 25
	INT  shift 26
	LPAREN  shift 27
	MINUS  shift 28
	IF  shift 29
	WHILE  shift 30
	FOR  shift 31
	LET  shift 3
	BREAK  shift 32
	NIL  shift 33
	.  error

	let_stmt  goto 34
	exp  goto 49
	assignment  goto 38
	funcall  goto 39
	var  goto 40
	if_stmt  goto 41
	for_stmt  goto 42
	while_stmt  goto 43


state 22
	tydec : TYPE ID EQ . ty  (7)

	ID  shift 50
	LBRACE  shift 51
	ARRAY  shift 52
	.  error

	ty  goto 53


state 23
	nonempty_expseq : error . SEMICOLON exp  (30)

	SEMICOLON  shift 54
	.  error


state 24
	exp : ID . LBRACK exp RBRACK OF exp  (51)
	exp : ID . LBRACE record_initialisation_fields RBRACE  (52)
	var : ID . DOT ID  (59)
	var : ID . LBRACK exp RBRACK  (60)
	var : ID .  (61)
	funcall : ID . LPAREN params RPAREN  (67)

	LPAREN  shift 55
	LBRACK  shift 56
	LBRACE  shift 57
	DOT  shift 58
	COMMA  reduce 61
	SEMICOLON  reduce 61
	RPAREN  reduce 61
	RBRACK  reduce 61
	RBRACE  reduce 61
	PLUS  reduce 61
	MINUS  reduce 61
	TIMES  reduce 61
	DIVIDE  reduce 61
	EQ  reduce 61
	NEQ  reduce 61
	LT  reduce 61
	LE  reduce 61
	GT  reduce 61
	GE  reduce 61
	AND  reduce 61
	OR  reduce 61
	ASSIGN  reduce 61
	THEN  reduce 61
	ELSE  reduce 61
	TO  reduce 61
	DO  reduce 61
	IN  reduce 61
	END  reduce 61
	FUNCTION  reduce 61
	VAR  reduce 61
	TYPE  reduce 61


state 25
	exp : STRING .  (31)

	.  reduce 31


state 26
	exp : INT .  (32)

	.  reduce 32


state 27
	exp : LPAREN . expseq RPAREN  (56)
	exp : LPAREN . error RPAREN  (57)
	expseq : .  (26)

	error  shift 59
	ID  shift 24
	STRING  shift 25
	INT  shift 26
	LPAREN  shift 27
	MINUS  shift 28
	IF  shift 29
	WHILE  shift 30
	FOR  shift 31
	LET  shift 3
	BREAK  shift 32
	NIL  shift 33
	RPAREN  reduce 26

	let_stmt  goto 34
	exp  goto 35
	expseq  goto 60
	nonempty_expseq  goto 37
	assignment  goto 38
	funcall  goto 39
	var  goto 40
	if_stmt  goto 41
	for_stmt  goto 42
	while_stmt  goto 43


state 28
	exp : MINUS . exp  (46)

	ID  shift 24
	STRING  shift 25
	INT  shift 26
	LPAREN  shift 27
	MINUS  shift 28
	IF  shift 29
	WHILE  shift 30
	FOR  shift 31
	LET  shift 3
	BREAK  shift 32
	NIL  shift 33
	.  error

	let_stmt  goto 34
	exp  goto 61
	assignment  goto 38
	funcall  goto 39
	var  goto 40
	if_stmt  goto 41
	for_stmt  goto 42
	while_stmt  goto 43


state 29
	if_stmt : IF . exp THEN exp  (64)
	if_stmt : IF . exp THEN exp ELSE exp  (65)

	ID  shift 24
	STRING  shift 25
	INT  shift 26
	LPAREN  shift 27
	MINUS  shift 28
	IF  shift 29
	WHILE  shift 30
	FOR  shift 31
	LET  shift 3
	BREAK  shift 32
	NIL  shift 33
	.  error

	let_stmt  goto 34
	exp  goto 62
	assignment  goto 38
	funcall  goto 39
	var  goto 40
	if_stmt  goto 41
	for_stmt  goto 42
	while_stmt  goto 43


state 30
	while_stmt : WHILE . exp DO exp  (63)

	ID  shift 24
	STRING  shift 25
	INT  shift 26
	LPAREN  shift 27
	MINUS  shift 28
	IF  shift 29
	WHILE  shift 30
	FOR  shift 31
	LET  shift 3
	BREAK  shift 32
	NIL  shift 33
	.  error

	let_stmt  goto 34
	exp  goto 63
	assignment  goto 38
	funcall  goto 39
	var  goto 40
	if_stmt  goto 41
	for_stmt  goto 42
	while_stmt  goto 43


state 31
	for_stmt : FOR . ID ASSIGN exp TO exp DO exp  (66)

	ID  shift 64
	.  error


state 32
	exp : BREAK .  (47)

	.  reduce 47


state 33
	exp : NIL .  (33)

	.  reduce 33


state 34
	exp : let_stmt .  (58)

	.  reduce 58


state 35
	nonempty_expseq : exp .  (28)
	exp : exp . PLUS exp  (34)
	exp : exp . MINUS exp  (35)
	exp : exp . TIMES exp  (36)
	exp : exp . DIVIDE exp  (37)
	exp : exp . EQ exp  (38)
	exp : exp . NEQ exp  (39)
	exp : exp . LT exp  (40)
	exp : exp . GT exp  (41)
	exp : exp . LE exp  (42)
	exp : exp . GE exp  (43)
	exp : exp . AND exp  (44)
	exp : exp . OR exp  (45)

	PLUS  shift 65
	MINUS  shift 66
	TIMES  shift 67
	DIVIDE  shift 68
	EQ  shift 69
	NEQ  shift 70
	LT  shift 71
	LE  shift 72
	GT  shift 73
	GE  shift 74
	AND  shift 75
	OR  shift 76
	SEMICOLON  reduce 28
	RPAREN  reduce 28
	END  reduce 28


state 36
	let_stmt : LET decs IN expseq . END  (25)

	END  shift 77
	.  error


state 37
	expseq : nonempty_expseq .  (27)
	nonempty_expseq : nonempty_expseq . SEMICOLON exp  (29)

	SEMICOLON  shift 78
	RPAREN  reduce 27
	END  reduce 27


state 38
	exp : assignment .  (48)

	.  reduce 48


state 39
	exp : funcall .  (49)

	.  reduce 49


state 40
	exp : var .  (50)
	assignment : var . ASSIGN exp  (62)

	ASSIGN  shift 79
	COMMA  reduce 50
	SEMICOLON  reduce 50
	RPAREN  reduce 50
	RBRACK  reduce 50
	RBRACE  reduce 50
	PLUS  reduce 50
	MINUS  reduce 50
	TIMES  reduce 50
	DIVIDE  reduce 50
	EQ  reduce 50
	NEQ  reduce 50
	LT  reduce 50
	LE  reduce 50
	GT  reduce 50
	GE  reduce 50
	AND  reduce 50
	OR  reduce 50
	THEN  reduce 50
	ELSE  reduce 50
	TO  reduce 50
	DO  reduce 50
	IN  reduce 50
	END  reduce 50
	FUNCTION  reduce 50
	VAR  reduce 50
	TYPE  reduce 50


state 41
	exp : if_stmt .  (53)

	.  reduce 53


state 42
	exp : for_stmt .  (54)

	.  reduce 54


state 43
	exp : while_stmt .  (55)

	.  reduce 55


state 44
	tyfield : ID . COLON ID  (15)

	COLON  shift 80
	.  error


state 45
	fundec : FUNCTION ID LPAREN tyfields . RPAREN EQ exp  (23)
	fundec : FUNCTION ID LPAREN tyfields . RPAREN COLON ID EQ exp  (24)

	RPAREN  shift 81
	.  error


state 46
	tyfields : nonempty_tyfields .  (12)
	nonempty_tyfields : nonempty_tyfields . COMMA tyfield  (14)

	COMMA  shift 82
	RPAREN  reduce 12
	RBRACE  reduce 12


state 47
	nonempty_tyfields : tyfield .  (13)

	.  reduce 13


state 48
	vardec : VAR ID COLON ID . ASSIGN exp  (22)

	ASSIGN  shift 83
	.  error


state 49
	vardec : VAR ID ASSIGN exp .  (21)
	exp : exp . PLUS exp  (34)
	exp : exp . MINUS exp  (35)
	exp : exp . TIMES exp  (36)
	exp : exp . DIVIDE exp  (37)
	exp : exp . EQ exp  (38)
	exp : exp . NEQ exp  (39)
	exp : exp . LT exp  (40)
	exp : exp . GT exp  (41)
	exp : exp . LE exp  (42)
	exp : exp . GE exp  (43)
	exp : exp . AND exp  (44)
	exp : exp . OR exp  (45)

	PLUS  shift 65
	MINUS  shift 66
	TIMES  shift 67
	DIVIDE  shift 68
	EQ  shift 69
	NEQ  shift 70
	LT  shift 71
	LE  shift 72
	GT  shift 73
	GE  shift 74
	AND  shift 75
	OR  shift 76
	IN  reduce 21
	FUNCTION  reduce 21
	VAR  reduce 21
	TYPE  reduce 21


state 50
	ty : ID .  (8)

	.  reduce 8


state 51
	ty : LBRACE . tyfields RBRACE  (9)
	tyfields : .  (11)

	ID  shift 44
	RBRACE  reduce 11

	tyfields  goto 84
	nonempty_tyfields  goto 46
	tyfield  goto 47


state 52
	ty : ARRAY . OF ID  (10)

	OF  shift 85
	.  error


state 53
	tydec : TYPE ID EQ ty .  (7)

	.  reduce 7


state 54
	nonempty_expseq : error SEMICOLON . exp  (30)

	ID  shift 24
	STRING  shift 25
	INT  shift 26
	LPAREN  shift 27
	MINUS  shift 28
	IF  shift 29
	WHILE  shift 30
	FOR  shift 31
	LET  shift 3
	BREAK  shift 32
	NIL  shift 33
	.  error

	let_stmt  goto 34
	exp  goto 86
	assignment  goto 38
	funcall  goto 39
	var  goto 40
	if_stmt  goto 41
	for_stmt  goto 42
	while_stmt  goto 43


state 55
	funcall : ID LPAREN . params RPAREN  (67)
	params : .  (68)

	ID  shift 24
	STRING  shift 25
	INT  shift 26
	LPAREN  shift 27
	MINUS  shift 28
	IF  shift 29
	WHILE  shift 30
	FOR  shift 31
	LET  shift 3
	BREAK  shift 32
	NIL  shift 33
	RPAREN  reduce 68

	let_stmt  goto 34
	exp  goto 87
	assignment  goto 38
	funcall  goto 39
	var  goto 40
	if_stmt  goto 41
	for_stmt  goto 42
	while_stmt  goto 43
	params  goto 88
	non_empty_params  goto 89


state 56
	exp : ID LBRACK . exp RBRACK OF exp  (51)
	var : ID LBRACK . exp RBRACK  (60)

	ID  shift 24
	STRING  shift 25
	INT  shift 26
	LPAREN  shift 27
	MINUS  shift 28
	IF  shift 29
	WHILE  shift 30
	FOR  shift 31
	LET  shift 3
	BREAK  shift 32
	NIL  shift 33
	.  error

	let_stmt  goto 34
	exp  goto 90
	assignment  goto 38
	funcall  goto 39
	var  goto 40
	if_stmt  goto 41
	for_stmt  goto 42
	while_stmt  goto 43


state 57
	exp : ID LBRACE . record_initialisation_fields RBRACE  (52)
	record_initialisation_fields : .  (16)

	ID  shift 91
	RBRACE  reduce 16

	record_initialisation_fields  goto 92
	ne_record_initialisation_fields  goto 93
	record_initialisation_field  goto 94


state 58
	var : ID DOT . ID  (59)

	ID  shift 95
	.  error


state 59
	nonempty_expseq : error . SEMICOLON exp  (30)
	exp : LPAREN error . RPAREN  (57)

	SEMICOLON  shift 54
	RPAREN  shift 96
	.  error


state 60
	exp : LPAREN expseq . RPAREN  (56)

	RPAREN  shift 97
	.  error


state 61
	exp : exp . PLUS exp  (34)
	exp : exp . MINUS exp  (35)
	exp : exp . TIMES exp  (36)
	exp : exp . DIVIDE exp  (37)
	exp : exp . EQ exp  (38)
	exp : exp . NEQ exp  (39)
	exp : exp . LT exp  (40)
	exp : exp . GT exp  (41)
	exp : exp . LE exp  (42)
	exp : exp . GE exp  (43)
	exp : exp . AND exp  (44)
	exp : exp . OR exp  (45)
	exp : MINUS exp .  (46)

	.  reduce 46


state 62
	exp : exp . PLUS exp  (34)
	exp : exp . MINUS exp  (35)
	exp : exp . TIMES exp  (36)
	exp : exp . DIVIDE exp  (37)
	exp : exp . EQ exp  (38)
	exp : exp . NEQ exp  (39)
	exp : exp . LT exp  (40)
	exp : exp . GT exp  (41)
	exp : exp . LE exp  (42)
	exp : exp . GE exp  (43)
	exp : exp . AND exp  (44)
	exp : exp . OR exp  (45)
	if_stmt : IF exp . THEN exp  (64)
	if_stmt : IF exp . THEN exp ELSE exp  (65)

	PLUS  shift 65
	MINUS  shift 66
	TIMES  shift 67
	DIVIDE  shift 68
	EQ  shift 69
	NEQ  shift 70
	LT  shift 71
	LE  shift 72
	GT  shift 73
	GE  shift 74
	AND  shift 75
	OR  shift 76
	THEN  shift 98
	.  error


state 63
	exp : exp . PLUS exp  (34)
	exp : exp . MINUS exp  (35)
	exp : exp . TIMES exp  (36)
	exp : exp . DIVIDE exp  (37)
	exp : exp . EQ exp  (38)
	exp : exp . NEQ exp  (39)
	exp : exp . LT exp  (40)
	exp : exp . GT exp  (41)
	exp : exp . LE exp  (42)
	exp : exp . GE exp  (43)
	exp : exp . AND exp  (44)
	exp : exp . OR exp  (45)
	while_stmt : WHILE exp . DO exp  (63)

	PLUS  shift 65
	MINUS  shift 66
	TIMES  shift 67
	DIVIDE  shift 68
	EQ  shift 69
	NEQ  shift 70
	LT  shift 71
	LE  shift 72
	GT  shift 73
	GE  shift 74
	AND  shift 75
	OR  shift 76
	DO  shift 99
	.  error

